2009-11-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Disabled error
	  bubbles by request from lluis.

2009-11-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ErrorTextMarker.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: Used the
	  correct screen for the screen height. 

2009-11-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: Increased
	  the number of maximum items in the quick class browser
	  dropdown.

2009-11-24  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/ErrorTextMarker.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Worked on
	  error markers

2009-11-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implement
	  markers for current stack frame.

2009-11-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Use correct cairo lib.

2009-11-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.addin.xml:
	* MonoDevelop.SourceEditor/SourceEditorCommands.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	  Implemented 'Code focus toggle and follow-cursor'.

2009-11-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Source
	  editor options are now public.

2009-11-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Move common
	  infobar code to new widget in MonoDevelop.Components.
	  Attempt to make messages clearer and more usable.

2009-11-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/AutoSave.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  552173 - Good file for testing texteditor performance'.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>
